# nanoclaw-lite

./: .env.example  .gitignore  CLAUDE.md  DEVLOG.md  README.md  package-lock.json  package.json  restart.sh  run-council.ts  test-omx-dry-run.mjs  tsconfig.json
addons/: README.md  registry.json
addons/clawhip/: addon.json  (+3 more)
browser-harness/: README.md  pyproject.toml
browser-harness/browser_harness/: __init__.py  cdp.py  config.py  daemon.py  skills.py
centcomm/: package-lock.json  package.json  roadmap.json
config/: mcporter.json
docs/: DEBUG_CHECKLIST.md  REQUIREMENTS.md  SPEC.md
scripts/: create-betting-model-channel.mjs  create-ideas-channels.mjs  create-klaw-projects-channels.mjs  record-demo.mjs  run-defensive-activity.py  seed-ideas-channels.mjs  setup-discord-channels.mjs  submit-prompt.mjs
src/: browser-daemon.ts  cli-health.ts  codex-bridge.ts  config.ts  container-runner.ts  db.test.ts  db.ts  discord-callbacks.ts  discord-channels.ts  discord-pipeline.ts  dm-allowlist.ts  formatting.test.ts  index.ts  inline-keyboards.ts  ipc.ts  local-runner.ts  omx-agents.test.ts  omx-agents.ts  omx-ambiguity.test.ts  omx-ambiguity.ts  omx-autoresearch.ts  omx-branch.test.ts  omx-branch.ts  omx-claim.test.ts  omx-claim.ts  omx-context.test.ts  omx-context.ts  omx-deslop.test.ts  omx-deslop.ts  omx-events.test.ts  omx-events.ts  omx-heartbeat.test.ts  omx-heartbeat.ts  omx-interview.ts  omx-mailbox.test.ts  omx-mailbox.ts  omx-ouroboros.test.ts  omx-ouroboros.ts  omx-pal.test.ts  omx-pal.ts  (+17 more)
systemd/: browser-harness.service  install.sh  nanoclaw-lite.service
(+226 files in other folders)
